@@ -1,5 +1,10 @@
 2017-07-25  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* ldlang.c (print_wild_statement): Use full names for SORT
+	specifiers.
+
+2017-07-25  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* ldgram.y (wildcard_spec): Rename to...
 	(section_name_spec): ...this.
 
